--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_locations">Locations</string>
-    <string name="title_cart">Cart</string>
+    <string name="title_orgs">Organizations</string>
     <string name="title_profile">Profile</string>
     <string name="title_calendar">Calendar</string>
     <string name="title_activity_login">Sign in</string>
