--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,13 +2,12 @@
 
 <resources>
 
-    <string name="cashapp_payment_username">$yoathsports</string>
-
     <string name="app_name">USYSR</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_locations">Locations</string>
+    <string name="title_coaches">Coaches</string>
     <string name="title_orgs">Organizations</string>
     <string name="title_profile">Profile</string>
     <string name="title_calendar">Calendar</string>
