--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="test_choiceC">Communication is Okay.</string>
     <string name="test_choiceD">Communication is Poor.</string>
 
+    <string name="about_ysr">Youth Sports Report\'s goal is simply to help make Youth Sports in America become more transparent!</string>
+
     <string name="app_name">USYSR</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
