review system base functionality complete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="title_locations">Locations</string>
     <string name="title_coaches">Coaches</string>
     <string name="title_orgs">Organizations</string>
+    <string name="title_org">Organization</string>
     <string name="title_profile">Profile</string>
     <string name="title_management">Management</string>
     <string name="title_calendar">Calendar</string>
