--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <!-- Created by ChazzCoin : December 2019 -->
 
 <resources>
-    <string name="test_questionA">How is their communication?</string>
-    <string name="test_choiceA">Communication is Excellent!</string>
-    <string name="test_choiceB">Communication is Good.</string>
-    <string name="test_choiceC">Communication is Okay.</string>
-    <string name="test_choiceD">Communication is Poor.</string>
+    <string name="test_questionA">How is this coaches communication during and after a game?</string>
+    <string name="test_choiceA">Communication is Excellent! Very responsive and professional!</string>
+    <string name="test_choiceB">Communication is Good. Timely and appropriate.</string>
+    <string name="test_choiceC">Communication is Okay. It could use some improvements.</string>
+    <string name="test_choiceD">Communication is Poor. This coach does not communicate appropriately.</string>
 
     <string name="about_ysr">Youth Sports Report\'s goal is simply to help make Youth Sports in America become more transparent!</string>
 
@@ -107,4 +107,6 @@
     <string name="review_string">Review</string>
     <string name="time_string">9:41</string>
     <string name="title_string">Organizations</string>
+
+
 </resources>
