--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="title_org">Organization</string>
     <string name="title_profile">Profile</string>
     <string name="title_service">Service</string>
+    <string name="title_team">Team</string>
     <string name="title_management">Management</string>
     <string name="title_calendar">Calendar</string>
     <string name="title_activity_login">Sign in</string>
