--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
 
     <string name="about_ysr">Youth Sports Report\'s goal is simply to help make Youth Sports in America become more transparent!</string>
 
-    <string name="app_name">YSR</string>
+    <string name="app_name">Ludi Sports</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">YSR Home</string>
     <string name="title_notifications">Notifications</string>
