--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,8 @@
 
         <!--    -->
     <string name="ek_img_content">ExportKit Image</string>
+    <string name="demo_e">ckrphone@gmail.com</string>
+    <string name="demo_p">allensgay</string>
     <string name="u_s__soccer_string">U.S. Soccer</string>
     <string name="www_ussoccer_com_string">www.ussoccer.com</string>
     <string name="__1__312__808_1300_string">+1 (312) 808-1300</string>
